# sandcastle-sim

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/readme-guidelines/: SKILL.md
.github/workflows/: pr-check.yml  release-check.yml
docs/: adding-matter.md  architecture.md  extending-the-simulator.md  floorplan.md  hardware.md  integrating-your-agent.md  tool-contract.md  your-devices.md  your-floorplan.md  your-home.md
evals/: quick.yaml
ha-config/: configuration.yaml  scenes.yaml
mosquitto/config/: mosquitto.conf
scripts/: banner_variants.py  bootstrap_ha.py  normalize_entity_ids.py  smoketest_mcp.py  test_light_control.py  test_milestone7.py
src/sandcastle_sim/: __init__.py  bootstrap.py  cli.py  floorplan.py  runtime.py
src/sandcastle_sim/agent/: __init__.py  chat.py  one_shot.py
src/sandcastle_sim/data/gui/: index.html
src/sandcastle_sim/data/seeds/: floorplan.json  topology.json
src/sandcastle_sim/data/seeds/ha_config/: scenes.yaml
src/sandcastle_sim/evals/: __init__.py  runner.py
src/sandcastle_sim/mcp_server/: __init__.py  events.py  ha_client.py  server.py
src/sandcastle_sim/simulator/: __init__.py  base.py  behaviors.py  climate.py  control.py  covers.py  lights.py  locks.py  main.py  media.py  sensors.py  switches.py  topology.py  vacuum.py
tests/: test_evals_runner.py  test_floorplan.py  test_integration_smoke.py  test_packaging.py  test_tool_routing.py  test_topology_workdir.py
